# garnet_reduction

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  environment.yml  profile  pyproject.toml  stats.py  workflow.py
.github/workflows/: garnetreduction.yml
conda.recipe/: meta.yaml
garnet/config/: instruments.py
garnet/reduction/: configuration.py  data.py  integration.py  normalization.py  parallel.py  peaks.py  plan.py  tools.py  ub.py
src/garnet/: _version.py  reduce.sh  workflow.py
src/garnet/config/: instruments.py
src/garnet/plots/: base.py  peaks.py  volume.py
src/garnet/reduction/: background.py  crystallography.py  data.py  determination.py  integration.py  normalization.py  parallel.py  peaks.py  plan.py  ub.py  version.py
tests/: conftest.py  test_config.py  test_data.py  test_determination.py  test_integration.py  test_normalization.py  test_parallel.py  test_plan.py  test_plots.py  test_ub.py  test_workflow.py
tests/data/: CORELLI_normalization.config  corelli_reduction_plan.json  corelli_reduction_plan.yaml  demand_reduction_plan.json  demand_reduction_plan.yaml  generate_test_data.py  mandi_reduction_plan.json  mandi_reduction_plan.yaml  snap_reduction_plan.json  snap_reduction_plan.yaml  topaz_reduction_plan.json  topaz_reduction_plan.yaml  wand2_reduction_plan.json  wand2_reduction_plan.yaml
tests/utility/: test_garnet_data.py
