[project]
name = "garnet"
description = "Single Crystal Graphical Advanced Reduction Neutron Event Toolkit"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "mantidworkbench >= 6.7.20230830",
    "pyoncat ~= 1.6"
]
license = { text = "GPL3.0" }

[build-system]
requires = [
  "setuptools",
   "wheel",
   "toml",
   "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/garnet/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["A", "ARG","ASYNC","BLE","C90", "D", "E", "F", "I", "N", "UP032", "W"]
ignore = ["D203", # conflict with D211
          "D213", # conflict with D212
          "ANN201", "D400", "D401", "D415", # Unnecessary
          "ARG002", "N802", "N803","N806", "D100","D101","D102","D103", "D104","D107","D417" # put it back in the future
          ]
